compiler-homework-2/seal.output
Terminals unused in grammar

   UMINUS


语法

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variableDecl_list: variableDecl
    8                  | variableDecl_list variableDecl

    9 variable: OBJECTID TYPEID

   10 variable_list: variable
   11              | variable_list ',' variable

   12 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock
   13         | FUNC OBJECTID '(' ')' TYPEID stmtBlock

   14 stmtBlock: '{' variableDecl_list stmt_list '}'
   15          | '{' stmt_list '}'
   16          | '{' variableDecl_list '}'
   17          | '{' '}'

   18 stmt: ';'
   19     | expr ';'
   20     | ifStmt
   21     | whileStmt
   22     | forStmt
   23     | breakStmt
   24     | continueStmt
   25     | returnStmt
   26     | stmtBlock

   27 stmt_list: stmt
   28          | stmt_list stmt

   29 ifStmt: IF expr stmtBlock
   30       | IF expr stmtBlock ELSE stmtBlock

   31 whileStmt: WHILE expr stmtBlock

   32 forStmt: FOR expr ';' expr ';' expr stmtBlock
   33        | FOR ';' expr ';' expr stmtBlock
   34        | FOR expr ';' ';' expr stmtBlock
   35        | FOR expr ';' expr ';' stmtBlock
   36        | FOR ';' ';' expr stmtBlock
   37        | FOR ';' expr ';' stmtBlock
   38        | FOR expr ';' ';' stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 breakStmt: BREAK ';'

   41 continueStmt: CONTINUE ';'

   42 returnStmt: RETURN expr ';'
   43           | RETURN ';'

   44 expr: OBJECTID '=' expr
   45     | CONST_INT
   46     | CONST_STRING
   47     | CONST_BOOL
   48     | CONST_FLOAT
   49     | OBJECTID
   50     | call
   51     | '(' expr ')'
   52     | expr '+' expr
   53     | expr '-' expr
   54     | expr '*' expr
   55     | expr '/' expr
   56     | expr '%' expr
   57     | '-' expr
   58     | expr '<' expr
   59     | expr LE expr
   60     | expr EQUAL expr
   61     | expr NE expr
   62     | expr GE expr
   63     | expr '>' expr
   64     | expr AND expr
   65     | expr OR expr
   66     | '!' expr
   67     | '~' expr
   68     | expr '&' expr
   69     | expr '|' expr
   70     | expr '^' expr

   71 call: OBJECTID '(' actual_list ')'
   72     | OBJECTID '(' ')'

   73 actual: expr

   74 actual_list: actual
   75            | actual_list ',' actual


Terminals, with rules where they appear

$end (0) 0
'!' (33) 66
'%' (37) 56
'&' (38) 68
'(' (40) 12 13 51 71 72
')' (41) 12 13 51 71 72
'*' (42) 54
'+' (43) 52
',' (44) 11 75
'-' (45) 53 57
'/' (47) 55
';' (59) 6 18 19 32 33 34 35 36 37 38 39 40 41 42 43
'<' (60) 58
'=' (61) 44
'>' (62) 63
'^' (94) 70
'{' (123) 14 15 16 17
'|' (124) 69
'}' (125) 14 15 16 17
'~' (126) 67
error (256)
IF (258) 29 30
ELSE (260) 30
WHILE (261) 31
FOR (262) 32 33 34 35 36 37 38 39
BREAK (263) 40
CONTINUE (264) 41
FUNC (265) 12 13
RETURN (266) 42 43
CONST_BOOL (267) 47
CONST_INT (268) 45
CONST_STRING (269) 46
CONST_FLOAT (270) 48
VAR (271) 6
AND (274) 64
OR (275) 65
EQUAL (276) 60
NE (277) 61
GE (278) 62
LE (279) 59
OBJECTID (284) 9 12 13 44 49 71 72
TYPEID (285) 9 12 13
UMINUS (287)
minusAsOne (288)


Nonterminals, with rules where they appear

$accept (45)
    左： 0
program (46)
    左： 1, 右： 0
decl_list (47)
    左： 2 3, 右： 1 3
decl (48)
    左： 4 5, 右： 2 3
variableDecl (49)
    左： 6, 右： 4 7 8
variableDecl_list (50)
    左： 7 8, 右： 8 14 16
variable (51)
    左： 9, 右： 6 10 11
variable_list (52)
    左： 10 11, 右： 11 12
callDecl (53)
    左： 12 13, 右： 5
stmtBlock (54)
    左： 14 15 16 17, 右： 12 13 26 29 30 31 32 33 34 35 36 37
    38 39
stmt (55)
    左： 18 19 20 21 22 23 24 25 26, 右： 27 28
stmt_list (56)
    左： 27 28, 右： 14 15 28
ifStmt (57)
    左： 29 30, 右： 20
whileStmt (58)
    左： 31, 右： 21
forStmt (59)
    左： 32 33 34 35 36 37 38 39, 右： 22
breakStmt (60)
    左： 40, 右： 23
continueStmt (61)
    左： 41, 右： 24
returnStmt (62)
    左： 42 43, 右： 25
expr (63)
    左： 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70, 右： 19 29 30 31 32 33 34 35 36 37 38
    42 44 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 73
call (64)
    左： 71 72, 右： 50
actual (65)
    左： 73, 右： 74 75
actual_list (66)
    左： 74 75, 右： 71 75


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       转到状态 3
    decl_list     转到状态 4
    decl          转到状态 5
    variableDecl  转到状态 6
    callDecl      转到状态 7


State 1

   12 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock
   13         | FUNC . OBJECTID '(' ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  转到状态 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          转到状态 12
    variableDecl  转到状态 6
    callDecl      转到状态 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   12 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock
   13         | FUNC OBJECTID . '(' ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    9 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  接受


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

   12 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock
   13         | FUNC OBJECTID '(' . ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9
    ')'       shift, and go to state 16

    variable       转到状态 17
    variable_list  转到状态 18


State 14

    9 variable: OBJECTID TYPEID .

    $default  reduce using rule 9 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   13 callDecl: FUNC OBJECTID '(' ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 19


State 17

   10 variable_list: variable .

    $default  reduce using rule 10 (variable_list)


State 18

   11 variable_list: variable_list . ',' variable
   12 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock

    ','  shift, and go to state 20
    ')'  shift, and go to state 21


State 19

   13 callDecl: FUNC OBJECTID '(' ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  转到状态 23


State 20

   11 variable_list: variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  转到状态 24


State 21

   12 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 25


State 22

   14 stmtBlock: '{' . variableDecl_list stmt_list '}'
   15          | '{' . stmt_list '}'
   16          | '{' . variableDecl_list '}'
   17          | '{' . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 42

    variableDecl       转到状态 43
    variableDecl_list  转到状态 44
    stmtBlock          转到状态 45
    stmt               转到状态 46
    stmt_list          转到状态 47
    ifStmt             转到状态 48
    whileStmt          转到状态 49
    forStmt            转到状态 50
    breakStmt          转到状态 51
    continueStmt       转到状态 52
    returnStmt         转到状态 53
    expr               转到状态 54
    call               转到状态 55


State 23

   13 callDecl: FUNC OBJECTID '(' ')' TYPEID stmtBlock .

    $default  reduce using rule 13 (callDecl)


State 24

   11 variable_list: variable_list ',' variable .

    $default  reduce using rule 11 (variable_list)


State 25

   12 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  转到状态 56


State 26

   29 ifStmt: IF . expr stmtBlock
   30       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 57
    call  转到状态 55


State 27

   31 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 58
    call  转到状态 55


State 28

   32 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   33        | FOR . ';' expr ';' expr stmtBlock
   34        | FOR . expr ';' ';' expr stmtBlock
   35        | FOR . expr ';' expr ';' stmtBlock
   36        | FOR . ';' ';' expr stmtBlock
   37        | FOR . ';' expr ';' stmtBlock
   38        | FOR . expr ';' ';' stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 59
    '('           shift, and go to state 41

    expr  转到状态 60
    call  转到状态 55


State 29

   40 breakStmt: BREAK . ';'

    ';'  shift, and go to state 61


State 30

   41 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 62


State 31

   42 returnStmt: RETURN . expr ';'
   43           | RETURN . ';'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 63
    '('           shift, and go to state 41

    expr  转到状态 64
    call  转到状态 55


State 32

   47 expr: CONST_BOOL .

    $default  reduce using rule 47 (expr)


State 33

   45 expr: CONST_INT .

    $default  reduce using rule 45 (expr)


State 34

   46 expr: CONST_STRING .

    $default  reduce using rule 46 (expr)


State 35

   48 expr: CONST_FLOAT .

    $default  reduce using rule 48 (expr)


State 36

   44 expr: OBJECTID . '=' expr
   49     | OBJECTID .
   71 call: OBJECTID . '(' actual_list ')'
   72     | OBJECTID . '(' ')'

    '='  shift, and go to state 65
    '('  shift, and go to state 66

    $default  reduce using rule 49 (expr)


State 37

   57 expr: '-' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 67
    call  转到状态 55


State 38

   66 expr: '!' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 68
    call  转到状态 55


State 39

   67 expr: '~' . expr

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 69
    call  转到状态 55


State 40

   18 stmt: ';' .

    $default  reduce using rule 18 (stmt)


State 41

   51 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    '('           shift, and go to state 41

    expr  转到状态 70
    call  转到状态 55


State 42

   17 stmtBlock: '{' '}' .

    $default  reduce using rule 17 (stmtBlock)


State 43

    7 variableDecl_list: variableDecl .

    $default  reduce using rule 7 (variableDecl_list)


State 44

    8 variableDecl_list: variableDecl_list . variableDecl
   14 stmtBlock: '{' variableDecl_list . stmt_list '}'
   16          | '{' variableDecl_list . '}'

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 71

    variableDecl  转到状态 72
    stmtBlock     转到状态 45
    stmt          转到状态 46
    stmt_list     转到状态 73
    ifStmt        转到状态 48
    whileStmt     转到状态 49
    forStmt       转到状态 50
    breakStmt     转到状态 51
    continueStmt  转到状态 52
    returnStmt    转到状态 53
    expr          转到状态 54
    call          转到状态 55


State 45

   26 stmt: stmtBlock .

    $default  reduce using rule 26 (stmt)


State 46

   27 stmt_list: stmt .

    $default  reduce using rule 27 (stmt_list)


State 47

   15 stmtBlock: '{' stmt_list . '}'
   28 stmt_list: stmt_list . stmt

    IF            shift, and go to state 26
    WHILE         shift, and go to state 27
    FOR           shift, and go to state 28
    BREAK         shift, and go to state 29
    CONTINUE      shift, and go to state 30
    RETURN        shift, and go to state 31
    CONST_BOOL    shift, and go to state 32
    CONST_INT     shift, and go to state 33
    CONST_STRING  shift, and go to state 34
    CONST_FLOAT   shift, and go to state 35
    OBJECTID      shift, and go to state 36
    '-'           shift, and go to state 37
    '!'           shift, and go to state 38
    '~'           shift, and go to state 39
    ';'           shift, and go to state 40
    '('           shift, and go to state 41
    '{'           shift, and go to state 22
    '}'           shift, and go to state 74

    stmtBlock     转到状态 45
    stmt          转到状态 75
    ifStmt        转到状态 48
    whileStmt     转到状态 49
    forStmt       转到状态 50
    breakStmt     转到状态 51
    continueStmt  转到状态 52
    returnStmt    转到状态 53
    expr          转到状态 54
    call          转到状态 55


State 48

   20 stmt: ifStmt .

    $default  reduce using rule 20 (stmt)


State 49

   21 stmt: whileStmt .

    $default  reduce using rule 21 (stmt)


State 50

   22 stmt: forStmt .

    $default  reduce using rule 22 (stmt)


State 51

   23 stmt: breakStmt .

    $default  reduce using rule 23 (stmt)


State 52

   24 stmt: continueStmt .

    $default  reduce using rule 24 (stmt)


State 53

   25 stmt: returnStmt .

    $default  reduce using rule 25 (stmt)


State 54

   19 stmt: expr . ';'
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   68     | expr . '&' expr
   69     | expr . '|' expr
   70     | expr . '^' expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '&'    shift, and go to state 89
    '^'    shift, and go to state 90
    '|'    shift, and go to state 91
    ';'    shift, and go to state 92


State 55

   50 expr: call .

    $default  reduce using rule 50 (expr)


State 56

   12 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 12 (callDecl)


State 57

   29 ifStmt: IF expr . stmtBlock
   30       | IF expr . stmtBlock ELSE stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   68     | expr . '&' expr
   69     | expr . '|' expr
   70     | expr . '^' expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '&'    shift, and go to state 89
    '^'    shift, and go to state 90
    '|'    shift, and go to state 91
    '{'    shift, and go to state 22

    stmtBlock  转到状态 93


State 58

   31 whileStmt: WHILE expr . stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   68     | expr . '&' expr
   69     | expr . '|' expr
   70     | expr . '^' expr

    AND    shift, and go to state 76
    OR     shift, and go to state 77
    EQUAL  shift, and go to state 78
    NE     shift, and go to state 79
    GE     shift, and go to state 80
    LE     shift, and go to state 81
    '<'    shift, and go to state 82
    '>'    shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87
    '%'    shift, and go to state 88
    '&'    shift, and go to state 89
    '^'    shift, and go to state 90
    '|'    shift, and go to state 91
    '{'    shift, and go to state 22

    stmtBlock  转到状态 94


State 59

   33 forStmt: FOR ';' . expr ';' expr stmtBlock
   36        | FOR ';' . ';' expr stmtBlock
   37        | FOR ';' . expr ';' stmtBlock
   39        | FOR ';' . ';' stmtBlock
